--- a/changes.txt
+++ b/changes.txt
@@ -27,6 +27,9 @@
 - In the Coccilib interface, the function file, giving the file being
   currently processed, has become files, returning a list of file names,
   because Coccinelle can work on more than one file at once.
+- For typedefs, symbols, iterator names, and declarer names, allow
+  redeclaration as either the same kind, or temporary redeclaration as a
+  metavariable.
 ** Features:
 - addition of --file-groups option
 - ocaml code allowed as constraints on position variables
