--- a/changes.txt
+++ b/changes.txt
@@ -39,6 +39,8 @@
   ... parameter or expression list, also in the case of transformation.
 - Fix various omissions related to binary and assignment metavariables.
 - Add whitespace on C code/transformed code boundary.
+- Types declared in header files are now taken into account while parsing
+  C files.
 * 1.0.4
 ** Language:
 - Length for statement list metavariables
