--- a/tools/spgen/documentation/documentation.tex
+++ b/tools/spgen/documentation/documentation.tex
@@ -5,12 +5,15 @@
 \usepackage[T1]{fontenc}
 
 % slightly reduce ridiculous margins
-\addtolength{\oddsidemargin}{-.5in}
-\addtolength{\evensidemargin}{-.5in}
-\addtolength{\textwidth}{1in}
+\addtolength{\oddsidemargin}{-0.7in}
+\addtolength{\evensidemargin}{-0.7in}
+\addtolength{\textwidth}{1.4in}
 
 %for images
 %\usepackage[pdftex]{graphicx}
+
+% remove indentation before paragraphs
+\setlength\parindent{0pt}
 
 % header
 \usepackage{fancyhdr}
