--- a/tools/spgen/documentation/usage.tex
+++ b/tools/spgen/documentation/usage.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
 \item Run \texttt{make} to compile the program.
 \item Run \texttt{make install}\footnote{If permission is denied, run it in superuser mode e.g. \texttt{sudo make install}, depending on your system.\label{sudo}} to install the program.
-\item (Optional) Try out the program by running \texttt{spgen examples/addvoid.cocci} or \texttt{spgen <path\_to\_your\_script>.cocci}.
+\item (Optional) Try out the program by running \texttt{spgen examples/addvoid.cocci}.
 \end{enumerate}
 \textbf{To uninstall}: From the \texttt{spgen} directory, do:
 \begin{enumerate}
@@ -43,25 +43,37 @@ In interactive mode, the program prompts the user for the information through th
 \bigskip
 
 \subsubsection{Configuration mode\label{config}}
-In configuration mode, the program looks for an \texttt{spgen} config file to provide the needed information to generate the file. For \texttt{<file>}.cocci, the config file should be called \texttt{<file>}.config.\\\\
+In configuration mode, the program looks for an \texttt{spgen} config file to provide the needed information to generate the file. For \texttt{<file>}.cocci, the config file should be called \texttt{<file>}.config.
+
 The user-specified attributes in the \textbf{preface} are, in no specific order ((r) means required):
 \begin{center}
 \renewcommand{\arraystretch}{1.2}
 \begin{tabular}{p{3cm}p{2.1cm}p{3.6cm}p{5.5cm}}
+
 \textbf{Attribute name} & \textbf{Shorthand} & \textbf{Value} & \textbf{Description}\\
-\texttt{description} (r) & \texttt{d} & Single-value text & Describes what the Coccinelle script does.\\
+
+\texttt{description} (r) & \texttt{d} & Single-value text & Describes what the script does.\\
+
 \texttt{confidence} (r) & \texttt{c} & Low, Moderate, High & Confidence level for the script.\\
+
 \texttt{authors} & \texttt{a} & Multi-value text & Authors of the script, including affiliation and license.\\
+
 \texttt{url} & \texttt{u} & Single-value text & URL for the script.\\
+
 \texttt{limitations} & \texttt{l} & Multi-value text & Limitations for the script.\\
+
 \texttt{keywords} & \texttt{k} & Single-value text & Keywords for the script.\\
+
 \texttt{options} & \texttt{o} & Single-value text &\texttt{spatch} options with which to run the script.\\
+
 \texttt{comments} & \texttt{m} & Single-value text & Additional comments.\\
 \end{tabular}
 \end{center}\vspace{0.5cm}
-The \textbf{rule information} contains error messages for \texttt{org} and \texttt{report}, and possibly rule names for rules that are unnamed in the original \texttt{Coccinelle script}.\\\\
+The \textbf{rule information} contains error messages for \texttt{org} and \texttt{report}, and possibly rule names for rules that are unnamed in the original \texttt{Coccinelle script}.
+
 \clearpage
 \noindent The syntax for the \texttt{spgen} config files is rather simple, and the easiest way to learn it is to run \texttt{spgen} in interactive mode and study the resulting config. But for completeness ...:
+
 \begin{itemize}
 \item The syntax for attributes is
 \begin{verbatim}
@@ -85,6 +97,7 @@ Meanwhile, \texttt{<message>} follow the syntax of \texttt{python} format string
 \end{verbatim}
 where \texttt{x} and \texttt{y} are metavariables in the rule. If using metavariables from another rule, write \texttt{<other\_rule\_name>.<metavar\_name>}. If using no metavariables, just write the error message surrounded by quotes.
 \item Comments can be written in \texttt{C}-style, ie. \texttt{//} and \texttt{/**/}.
+
 \end{itemize}
 \bigskip
 
