spgen: set headheight to remove fancyhdr warning

--- a/tools/spgen/documentation/documentation.tex
+++ b/tools/spgen/documentation/documentation.tex
@@ -8,6 +8,7 @@
 \addtolength{\oddsidemargin}{-0.7in}
 \addtolength{\evensidemargin}{-0.7in}
 \addtolength{\textwidth}{1.4in}
+\setlength{\headheight}{14pt}
 
 %for images
 %\usepackage[pdftex]{graphicx}
