Get rid of the --enable-release configure option.

--- a/changes.txt
+++ b/changes.txt
@@ -33,6 +33,7 @@
 ** Features:
 - addition of --file-groups option
 - ocaml code allowed as constraints on position variables
+- --enable-release configure option not accepted any longer.
 ** Bugfix:
 - Don't complain about unreferenced variables in ungenerated rules
 - Be flexible about the matching of the first or last comma in a
