Remove added space when removing unneeded parens at the startof an arglist

--- a/changes.txt
+++ b/changes.txt
@@ -42,6 +42,7 @@
 - Types declared in header files are now taken into account while parsing
   C files.
 - ( and & now allowed at the start of a line in a SmPL rule header
+- Remove added space when removing unneeded parens at the start of an arglist
 * 1.0.4
 ** Language:
 - Length for statement list metavariables
