pycocci: skip proof if git dir is dirty
SmPL <=> Patch equivalence proof support requires your
git tree to be clean, if it is dirty it will fail. To
avoid confusing users complain if their tree is dirty.

You will either need commit any local pending changes
or discard them before proceeding with SmPL <=> Patch
equivalence proof support.

Extend documentation for this.

Acked-by: Julia Lawall <julia.lawall@lip6.fr>
Signed-off-by: Luis R. Rodriguez <mcgrof@kernel.org>

--- a/docs/pycocci.1
+++ b/docs/pycocci.1
@@ -201,6 +201,9 @@ will set the tree back to the master branch. Each run of \fBpycocci --show-proof
 will create two new git branches. 8 random characters are postixed to each new
 git branch created to avoid conflicts with previous runs.
 
+You must run this option with a clean git tree, if you have any pending changes
+you must commit them or discard them.
+
 .SH AUTHOR
 \fBpycocci\fP and this man page was written by Luis R. Rodriguez <mcgrof@do-not-panic.com>
 
