--- a/changes.txt
+++ b/changes.txt
@@ -30,6 +30,7 @@
 - For typedefs, symbols, iterator names, and declarer names, allow
   redeclaration as either the same kind, or temporary redeclaration as a
   metavariable.
+- Support for Python 3
 - Support for iterations in Python scripts
 ** Features:
 - addition of --file-groups option
