--- a/changes.txt
+++ b/changes.txt
@@ -45,6 +45,9 @@
   To test, use: ./scripts/pycocci-check.sh after building Coccinelle.
   This will touch your reflog though, and as such is disabled by default,
   to clean your reflog you can use: git reflog expire --all --expire=now
+- --defined and --undefined arguments now apply to #if as well as #ifdef.
+  The expression has to be written exactly as it appears in the code, minus
+  leading whitespace and any comments (leading or nonleading).
 ** Bugfix:
 - pycocci: skip proof when git dir is dirty
 - pycocci: fix gitname use, when using SmPL <=> patch equivalence proof
