--- a/changes.txt
+++ b/changes.txt
@@ -50,6 +50,8 @@
 - --defined and --undefined arguments now apply to #if as well as #ifdef.
   The expression has to be written exactly as it appears in the code, minus
   leading whitespace and any comments (leading or nonleading).
+- Compare the standard output of scripts in test files with testfile.stdout
+  if provided (with --compare-with-expected)
 ** Bugfix:
 - pycocci: skip proof when git dir is dirty
 - pycocci: fix gitname use, when using SmPL <=> patch equivalence proof
