Added: Metavariable initialization in Python scripts
New methods are available in the cocci object for Python scripts:
make_ident, make_expr, make_stmt, make_stmt_with_env, make_type, make_listlen,
make_position.
They act as the homonymous functions in Ocaml Coccilib module.
Example:
  coccinelle.var = cocci.make_expr("x < 0")

ASTs are stored as opaque values in Python (Pycaml's "ocamlpills").

For compatibility, variables bound to strings are still converted to new
identifiers. I.e., after the execution of the two scripts
  coccinelle.var = "x"
and
  coccinelle.var = cocci.make_ident("x")
the same AST is bound to the Coccinelle metavariable rule.var (even if
cocci.make_ident("x") is seen as an opaque value in Python whereas "x"
is just a string, of course).

The tests python_mdecl and python_mdeclp are the translations of mdecl
and mdeclp from OCaml scripts to Python scripts.

Note that the test mdeclp2 uses OCaml to translate a string
produced by a Python script into an AST position: Python scripts can
now directly instantiate new AST positions.

Paths in tests mdeclp and mdeclp2 have been corrected to pass when
-testall is launched in the root directory of Coccinelle.

--- a/changes.txt
+++ b/changes.txt
@@ -32,6 +32,8 @@
   metavariable.
 - Support for Python 3
 - Support for iterations in Python scripts
+- Metavariable initialization in Python scripts to a number of kinds of
+  AST structures
 ** Features:
 - addition of --file-groups option
 - ocaml code allowed as constraints on position variables
