--- a/docs/manual/main.tex
+++ b/docs/manual/main.tex
@@ -129,7 +129,8 @@ It is organized as follows:
 
 %coupling: copyright.txt
 Coccinelle copyright is\\
-\copyright~2010, University of Copenhagen DIKU and INRIA.\\
+\copyright~2012-2016, Inria.\\
+\copyright~2010-2011, University of Copenhagen DIKU and INRIA.\\
 \copyright~2005-2009, University of Copenhagen DIKU and Ecole des Mines de Nantes.
 
 Coccinelle is open source and can be freely redistributed under the
