--- a/changes.txt
+++ b/changes.txt
@@ -24,6 +24,15 @@
 
 * 1.0.5
 ** Language:
+** Features:
+** Bugfix:
+- Avoid parallel compilation of pycaml.  Fix contributed by Luis Rodriguez.
+- Allow the use of absolute path names with id-utils.  Issue identified by
+Luis Rodriguez.
+- Clean up temporary files when using parmap.  Issue identified by Luis
+Rodriguez.
+* 1.0.5
+** Language:
 - In the Coccilib interface, the function file, giving the file being
   currently processed, has become files, returning a list of file names,
   because Coccinelle can work on more than one file at once.
