docs/demos: add a few ++ documentation and demos
This perhaps is not the best demo for use of ++ but it
should suffice. This adds some basic documentation for it
and a demo.

Signed-off-by: Luis R. Rodriguez <mcgrof@kernel.org>

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -851,6 +851,11 @@ rule should apply if rule XXX was never matched at all.
 
 \section{Transformation}
 
+Coccinelle allows for transformations to enable modifying C code using
+very precise grammar.
+
+\subsection{Basic transformations}
+
 The transformation specification essentially has the form of C code, except
 that lines to remove are annotated with \verb+-+ in the first column, and
 lines to add are annotated with \verb-+-.  A transformation specification
@@ -1099,6 +1104,96 @@ write
 
 Some kinds of terms can only appear in + code.  These include comments,
 ifdefs, and attributes (\texttt{\_\_attribute\_\_((...))}).
+
+\subsection{Advanced transformations}
+
+You may run into the situation where grammar you specify for
+transformations might associate itself with a few consecutive tokens
+in code, in such cases Coccinelle cannot guarantee order when making
+additions. If you are sure that order does not matter you can use the
+optional double addition token \texttt{++} to annotate that Coccinelle
+may add things out of order. This may be for instance rather safe in
+certain situations when extending a data structure with more members,
+based on existing members of the data structure. The following rule helps
+to extend a data structure with a respective float for one present int.
+This works well with the simple \texttt{+}.
+
+\begin{lstlisting}[language=Cocci]
+@simpleplus@
+identifier x,v;
+fresh identifier xx = v ## "_float";
+@@
+
+struct x {
++	float xx;
+	...
+	int v;
+	...
+}
+\end{lstlisting}
+
+This simpleplus rule transformation works well when only one token is being
+modified in code. For instance if we had plusplus1.c:
+
+\begin{lstlisting}[language=C]
+struct x {
+	int z;
+	char b;
+};
+\end{lstlisting}
+
+If however you have two consecutive tokens that Coccinelle
+can transform, order cannot be guaranteed for how Coccinelle
+makes additions. If you are sure order does not matter for
+the transformation you may use \texttt{++} instead, as follows:
+
+\begin{lstlisting}[language=Cocci]
+@plusplus@
+identifier x,v;
+fresh identifier xx = v ## "_float";
+@@
+
+struct x {
+++	float xx;
+	...
+	int v;
+	...
+}
+\end{lstlisting}
+
+This rule would work against say a plusplus2.c which had two
+more tokens added in comparison to plusplus1.c:
+
+\begin{lstlisting}[language=C]
+struct x {
+	int z;
+	int a;
+	char b;
+	int c;
+	int *d;
+};
+\end{lstlisting}
+
+You would end up with a C file which would look similar to this, the
+precise order of the where each float is placed is however not guaranteed
+with respect to each other:
+
+\begin{lstlisting}[language=C]
+struct x {
+	float a_float;
+	float c_float;
+	float z_float;
+	int z;
+	int a;
+	char b;
+	int c;
+	int *d;
+};
+\end{lstlisting}
+
+If you used simpleplus rule on plusplus2.c you would end up with
+an "already tagged token" error due to the ordering considerations
+explained in this section.
 
 \section{Types}
 \label{types}
