per file profiling

--- a/changes.txt
+++ b/changes.txt
@@ -27,6 +27,7 @@
 ** Features:
 - Add Coccilib.version() allowing ocaml code to access the virsion of
   spatch being used.
+- Per file profiling with --profile-per-file for processing of directories.
 ** Bugfix:
 - Avoid parallel compilation of pycaml.  Fix contributed by Luis Rodriguez.
 - Allow the use of absolute path names with id-utils.  Issue identified by
