--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -695,6 +695,9 @@ commands.}
 \developer{-{}-profile}{ Gather timing information about the main Coccinelle
 functions.}
 
+\developer{-{}-profile-per-file}{
+Like {\bf -{}-profile}, but generates information after processing each file.}
+
 \developer{-{}-disable-once}{Print various warning messages every time some
 condition occurs, rather than only once.}
 
